versions/v0.10/modules/en/pages/reference/cli/fleet-cli/fleet.adoc
= fleet
:revdate: 2025-04-30
:page-revdate: {revdate}

Manage Fleet operations

----
fleet [flags]
----

== Options

----
  -h, --help   help for fleet
----

== SEE ALSO

* xref:./fleet_apply.adoc[fleet apply]	 - Create bundles from directories, and output them or apply them on a cluster
* xref:./fleet_cleanup.adoc[fleet cleanup]	 - Clean up outdated resources
* xref:./fleet_deploy.adoc[fleet deploy]	 - Deploy a bundledeployment/content resource to a cluster, by creating a Helm release. This will not deploy the bundledeployment/content resources directly to the cluster.
* xref:./fleet_target.adoc[fleet target]	 - Print available targets for a bundle

* xref:./fleet_apply.adoc[fleet apply]	 - Create bundles from directories, and output them or apply them on a cluster
* xref:./fleet_cleanup.adoc[fleet cleanup]	 - Clean up outdated cluster registrations
* xref:./fleet_deploy.adoc[fleet deploy]	 - Deploy a bundledeployment/content resource to a cluster, by creating a Helm release. This will not deploy the bundledeployment/content resources directly to the cluster.
* xref:./fleet_target.adoc[fleet target]	 - Print available targets for a bundle
