versions/v0.14/modules/en/pages/reference/cli/fleet-cli/fleet.adoc
= fleet
:revdate: 2025-07-23
:page-revdate: {revdate}
:page-aliases: /fleet

Manage {product_name} operations

----
fleet [flags]
----

[#_options]
== Options

----
  -h, --help   help for fleet
----

[#_see_also]
== SEE ALSO
[#_main_commands]
=== Main commands

* xref:/reference/cli/fleet-cli/fleet_apply.adoc[fleet apply]	 - Create bundles from directories, and output them or apply them on a cluster
* xref:/reference/cli/fleet-cli/cleanup/fleet_cleanup.adoc[fleet cleanup]	 - Clean up outdated cluster registrations
* xref:/reference/cli/fleet-cli/fleet_deploy.adoc[fleet deploy]	 - Deploy a bundledeployment/content resource to a cluster, by creating a Helm release. This will not deploy the bundledeployment/content resources directly to the cluster.
* xref:/reference/cli/fleet-cli/fleet_gitcloner.adoc[fleet gitcloner]	 - Clones a git repository
* xref:/reference/cli/fleet-cli/fleet_target.adoc[fleet target]	 - Print available targets for a bundle

[#_troubleshooting_and_diagnostics]
=== Troubleshooting and diagnostics

* xref:/reference/cli/fleet-cli/fleet_monitor.adoc[fleet monitor]	 - Monitor Fleet setups for issues
* xref:/reference/cli/fleet-cli/fleet_analyze.adoc[fleet analyze]	 - Analyze snapshots created by `fleet monitor`
* xref:/reference/cli/fleet-cli/fleet_dump.adoc[fleet dump]	 - Dump cluster data into an archive
